--- a/index.html
+++ b/index.html
@@ -4299,7 +4299,7 @@ Location of Uber pickups in the New York City area. The points represent a rando
 <div id="active-learning-exercise-seattle-police-calls-data-viz" class="section level2">
 <h2>Active Learning Exercise: Seattle Police Calls Data Viz</h2>
 <p>Explore the Seattle police dataset (or a spatial dataset of your own) and leaflet to make an interactive data visualization.</p>
-<pre class="r"><code>seattle &lt;- read_csv('SeattlePolice.csv')</code></pre>
+<pre class="r"><code>seattle &lt;- read_csv('https://raw.githubusercontent.com/Stat534/DataViz/main/SeattlePolice.csv')</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   CAD.Event.Number = col_double(),
